# eclair

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  version-bump.yml
benchmark/: details_bike.csv  details_car.csv  details_foot.csv  details_truck.csv
python/eclair_routing/: __init__.py  _eclair.pyi  models.py  modes.py  router.py
src/: engine.rs  h3.rs  haversine.rs  lib.rs
tests/: test_eclair.py  test_router.py
